docker-compose fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,26 +5,14 @@ services:
     environment:
       PORT: '5000'
       SHOW_URLS: 'true'
-      USERS_URL: '192.168.99.101'
-      USERS_PORT: '8001'
-      USERS_ENTRY: 'users/'
-      VIDEOS_URL: '192.168.99.101'
-      VIDEOS_PORT: '8002'
-      VIDEOS_ENTRY: 'videos/'
-      MUSICGENRES_URL: '192.168.99.101'
-      MUSICGENRES_PORT: '8002'
-      MUSICGENRES_ENTRY: 'musicgenres/'
-      THEMES_URL: '192.168.99.101'
-      THEMES_PORT: '8002'
-      THEMES_ENTRY: 'themes/'
-      PREFERENCES_URL: '192.168.99.101'
-      PREFERENCES_PORT: '8002'
-      PREFERENCES_ENTRY: 'preferences/'
-      SINGERS_URL: '192.168.99.101'
-      SINGERS_PORT: '8002'
-      SINGERS_ENTRY: 'singers/'
-      SONGS_URL: '192.168.99.101'
-      SONGS_PORT: '8002'
-      SONGS_ENTRY: 'songs/'
+      STUDENTS_URL: '192.168.99.101'
+      STUDENTS_PORT: '4000'
+      STUDENTS_ENTRY: 'students/'
+      COURSES_URL: '192.168.99.101'
+      COURSES_PORT: '4001'
+      COURSES_ENTRY: 'courses/'
+      GRADES_URL: '192.168.99.101'
+      GRADES_PORT: '4002'
+      GRADES_ENTRY: 'grades/'
     ports:
       - '5000:5000'
